@@ -1,3 +1,7 @@
+2002-05-10  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.h: On Solaris, include <locale.h>.
+
 2002-05-04  Bruno Haible  <bruno@clisp.org>
 
 	* javacomp.c (compile_java_class): Ignore non-digits in the first
